[gd_scene load_steps=8 format=3 uid="uid://cnhi2habb66eh"]

[ext_resource type="Script" path="res://Scripts/Objects/InteractableObject.gd" id="1_j6hbt"]
[ext_resource type="PackedScene" uid="uid://b82wwxcm0kjdy" path="res://Scenes/GUI/Popup.tscn" id="2_173t5"]
[ext_resource type="Texture2D" uid="uid://doptbkt6c8b1d" path="res://Sprites/Map/TilesetElement.png" id="3_6x4rv"]
[ext_resource type="Script" path="res://Scripts/Effects/LightSwitchEffect.gd" id="4_avw4e"]
[ext_resource type="PackedScene" uid="uid://brkmixknj2m12" path="res://Scenes/Effects/DarkEffect.tscn" id="5_bp7ko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvotm"]
size = Vector2(13, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_uu6jh"]
radius = 15.0333

[node name="LightSwitchObject" type="StaticBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_j6hbt")

[node name="Popup" parent="." instance=ExtResource("2_173t5")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_6x4rv")
hframes = 15
vframes = 15
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_tvotm")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_uu6jh")

[node name="LightSwitchEffect" type="Node2D" parent="." groups=["Residuals"]]
script = ExtResource("4_avw4e")
lighting_effect = ExtResource("5_bp7ko")

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="play_effect" from="LightSwitchEffect" to="." method="_on_give_item_effect_play_effect"]
